[package]
name = "dfa_learning_toolkit"
version = "1.0.0"
authors = ["Cherrett <cherrettdaniel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

#[profile.release]
#debug = true
#split-debuginfo = "packed"