[package]
name = "dfa_learning_toolkit"
authors = ["Daniel Cherrett"]
version = "1.0.0"
description = "A DFA Learning Toolkit developed in Rust."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

#[profile.release]
#debug = true
#split-debuginfo = "packed"